2011-18-07  Lorenzo Natale  <lorenzo.natale@iit.it>
    * Forcing ICUB_APPLICATION_PREFIX from ICUB_ROOT
	* Disable and complain if ICUB_ROOT is not set
	
2011-15-07  Lorenzo Natale  <lorenzo.natale@iit.it>
    * tagging version 1.1.3

2011-07-02  Ugo Pattacini  <ugo.pattacini@iit.it>
     * main/src/libraries/icubmod/gazeController:
     new methods get3DPoint() and get3DPointOnPlane() added to
     facilitate 2d-3d mapping.
	 
2011-06-1 Lorenzo Natale <lorenzo.natale@iit.it>
    * Tagging version 1.1.1
    
2011-06-1 Lorenzo Natale <lorenzo.natale@iit.it>
    * app/iCubCluster/icub-cluster.py: patch from Lars Schillingmann to 
    allow ssh user to be controlled by ~/.ssh/config
    
2011-06-1 Lorenzo Natale <lorenzo.natale@iit.it>
    * CMakeLists.txt: fix bug reported by Lars Schillingmann
    some options at the end of the file moved before calls to add_subdirectory().
    
2011-05-26 Lorenzo Natale <lorenzo.natale@iit.it>
    * CMakeLists.txt: iCub now requires YARP 2.3.4

2011-05-26 Randazzo Marco <marco.randazzo@iit.it>
	* main/src/core/iCubInterface/ControlBoardWrapper2.cpp
	* main/src/core/iCubInterface/ControlBoardWrapper2.h
    * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.cpp
	* main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.h
	- The following methods of yarp::dev::IImpedanceControl have been deprecated:
	bool getImpedance(int j, double *stiffness, double *damping, double *offset)
	bool setImpedance(int j, double stiffness,  double damping,  double offset)
	Instead, use the new methods:
	bool getImpedance(int j, double *stiffness, double *damping)
	bool setImpedance(int j, double stiffness,  double damping)
	THIS MODIFICATION REQUIRES A YARP UPDATE
	
2011-05-17 Randazzo Marco <marco.randazzo@iit.it>
    * main/src/libraries/icubmod/canBusMotionControl/CanBusMotionControl.cpp
    released new version of CanBusMotionControl with improved parsing of .ini files (by LorenzoNatale)
