@@ -17,7 +17,7 @@ project(iCub)
 
 SET(ICUB_REQYARP_VERSION_MAJOR "2")
 SET(ICUB_REQYARP_VERSION_MINOR "3")
-SET(ICUB_REQYARP_VERSION_PATCH "6")
+SET(ICUB_REQYARP_VERSION_PATCH "7")
 
 ## avoid checking specific versions of YARP with CMake 2.6.0
 ## this is because find_package does not work as expected with CMake 2.6.0
